# Stickney

./: .gitignore  README.rst  pyproject.toml
src/stickney/: __init__.py  client.py  exc.py  frame.py  sim.py
tests/: test_client.py
