[tool.poetry]
name = "stickney"
version = "0.7.2"
description = "Asynchronous websockets library"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "stickney", from = "src"}]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
wsproto = "^1.2.0"
anyio = "^4.0.0"
furl = "^2.1.3"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
trio = "^0.22.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
