[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stickney"
version = "0.7.3"
description = "Asynchronous websockets library"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "stickney", from = "src"}]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11"
wsproto = ">=1.2.0"
anyio = "^4.1.0"
attrs = ">=23.1.0"


[tool.poetry.group.dev.dependencies]
trio = ">=0.22.2"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.5"
mypy = ">=1.7.0"
pyright = "^1.1.339"

[tool.ruff]
target-version = "py311"
respect-gitignore = true
# fix = true
src = ["src/chiru"]
line-length = 100
show-source = true

select = [
  "RUF", 
  "F", 
  "E", 
  "W",
  "I", 
  "UP", 
  "B",  
  "YTT", 
  "ASYNC",
  "TRIO", 
  "PYI", 
  "SIM", 
  "RET",
  "PERF",
]
ignore = [
    "W291",  # SHUT THE FUCK UP WHEN I'M TYPING COMMENTS
    "W293",
]

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

local_partial_types = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
